[gd_scene load_steps=4 format=3 uid="uid://bqgawn6yplg35"]

[ext_resource type="Texture2D" uid="uid://cawp78nuacm7e" path="res://Assets/art/icons/marker.png" id="1_a4vkg"]
[ext_resource type="Script" uid="uid://bhlnmebw57cly" path="res://Source/UI/World/Waypoint.gd" id="2_a4vkg"]
[ext_resource type="PackedScene" uid="uid://bqxwrkdlbhqdv" path="res://Source/UI/World/SelectionArea.tscn" id="3_nlstm"]

[node name="Marker" type="Sprite2D"]
z_index = 2000
z_as_relative = false
texture = ExtResource("1_a4vkg")
offset = Vector2(0, -40)
script = ExtResource("2_a4vkg")

[node name="SelectionArea" parent="." node_paths=PackedStringArray("connected_object") instance=ExtResource("3_nlstm")]
connected_object = NodePath("")

[node name="CollisionPolygon2D" parent="SelectionArea" index="0"]
polygon = PackedVector2Array(0, 0, 18, -30, 26, -49, 26, -59, 22, -68, 13, -77, 0, -80, -13, -77, -22, -68, -26, -58, -26, -48, -18, -30)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 71.0
offset_bottom = 77.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="LocationLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Location: "
horizontal_alignment = 2

[node name="LocationReadout" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Distance: "
horizontal_alignment = 2

[node name="DistanceReadout" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Speed: "
horizontal_alignment = 2

[node name="SpeedInput" type="SpinBox" parent="PanelContainer/GridContainer"]
layout_mode = 2
step = 0.1

[node name="TimeLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Time: "
horizontal_alignment = 2

[node name="TimeInput" type="LineEdit" parent="PanelContainer/GridContainer"]
layout_mode = 2
placeholder_text = "HHH:MM:SS"
max_length = 9
expand_to_text_length = true

[node name="ETALabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "ETA: "
horizontal_alignment = 2

[node name="ETAReadout" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="FuelRemainingLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Fuel: "
horizontal_alignment = 2

[node name="FuelRemainingReadout" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
button_mask = 3
text = "Remove"

[connection signal="value_changed" from="PanelContainer/GridContainer/SpeedInput" to="." method="_on_speed_input_value_changed"]
[connection signal="text_submitted" from="PanelContainer/GridContainer/TimeInput" to="." method="_on_time_input_text_submitted"]
[connection signal="pressed" from="PanelContainer/GridContainer/RemoveButton" to="." method="_on_remove_button_pressed"]

[editable path="SelectionArea"]
